--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,15 @@ page_gen:
     template: 'lexiconEntry'
     dir: 'w'
     index_files: false
-    name_expr: record["strongNumber"].to_i.to_s
+    name_expr: record["strongNumber"]
 #    name: 'strongNumber'    
+  - data: partiallexicons
+    template: 'lexicon'
+    dir: ''
+    index_files: false
+    name_expr: record["name"]
+
+footer: '<a href="https://ibc.oarc.science/" target="_blank">Institute for Biblical Content</a>. <strong>Biblical Hebrew for linguists: a multilingual analytic biblical Hebrew lexicon</strong>.<br>Implemented as part of the research project at the <a href="https://ens.fr" target="_blank">ENS</a> by <a href="https://seveleu.com" target="_blank">M.Seveleu-Dubrovnik</a>, PhD. Uses <a href="hhttps://jekyllrb.com/" target="_blank">Jekyll</a>.<br><a href="https://seveleu.com/pages/bh-resource">About</a> | <a href="https://www.mechon-mamre.org/p/pt/ptmp3prq.htm" target="_blank">Listen audio</a>'
+firstyear: 2014
+github: "https://github.com/wlcling"
+keyboardreminder: 'To navigate back- and forwards, use the arrow keys <span class="shadow">←</span> and <span class="shadow">→</span> on your keyboard<br>'
