--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ firstyear: 2014
 github: "https://github.com/wlcling"
 keyboardreminder: 'To navigate back- and forwards, use the arrow keys <span class="shadow">←</span> and <span class="shadow">→</span> on your keyboard<br>'
 
-website: "https://lex.ibc.oarc.institute"
-readersite: "https://wlc.ibc.oarc.institute"
+website: "https://lex.ibc.oarc.science"
+readersite: "https://wlc.ibc.oarc.science"
 readersiteprefix: en
 siteprefix: en
 lang: en
