--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ page_gen:
     index_files: false
     name_expr: record["nameid"]
 
-footer: '<a href="https://ibc.oarc.science/" target="_blank">Institute for Biblical Content</a>. <strong>Biblical Hebrew for linguists: a multilingual analytical biblical Hebrew lexicon</strong>.<br>Implemented as part of the research project at the <a href="https://ens.fr" target="_blank">ENS</a> by <a href="https://seveleu.com" target="_blank">M.Seveleu-Dubrovnik</a>, PhD. Uses <a href="hhttps://jekyllrb.com/" target="_blank">Jekyll</a>.<br><a href="https://seveleu.com/pages/bh-resource">About</a> | <a href="https://www.mechon-mamre.org/p/pt/ptmp3prq.htm" target="_blank">Listen audio</a>'
+footer: '<a href="https://ibc.oarc.science/" target="_blank">Institute for Biblical Content</a>. <strong>Biblical Hebrew for linguists: a multilingual analytical biblical Hebrew lexicon</strong>.<br>Implemented as part of the research project at the <a href="https://ens.fr" target="_blank">ENS</a> by <a href="https://seveleu.com" target="_blank">M.Seveleu-Dubrovnik</a>, PhD. Uses <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.<br><a href="https://seveleu.com/pages/bh-resource">About</a> | <a href="https://www.mechon-mamre.org/p/pt/ptmp3prq.htm" target="_blank">Listen audio</a>'
 firstyear: 2014
 github: "https://github.com/wlcling"
 keyboardreminder: 'To navigate back- and forwards, use the arrow keys <span class="shadow">←</span> and <span class="shadow">→</span> on your keyboard<br>'
@@ -26,7 +26,7 @@ readersiteprefix: en
 siteprefix: en
 lang: en
 sitename: Biblical Hebrew for Linguists
-heading1: Strong's
+heading1: "Strong's"
 subname: Analytical biblical Hebrew lexicon
 lexicon1entries: entries
 lexicon2marked: marked
@@ -58,3 +58,5 @@ landingpartial1: ordered alphabetically
 landingpartial2: alphabetical ordering
 landingpartial3: ordered by frequency
 landingpartial4: ordering by frequency
+landingpartial5: ordered alphabetically
+landingpartial6: ordered by frequency
