exper no siteprefix

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ keyboardreminder: 'Pour naviguer en avant et en arrière, utiliser les touches f
 
 website: "https://lex.ibc.oarc.science"
 readersite: "https://wlc.ibc.oarc.science"
-readersiteprefix: fr
-siteprefix: fr
+0readersiteprefix: fr
+0siteprefix: fr
 lang: fr
 sitename: Hébreu biblique pour linguistes
 heading1: Strong's
