--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,21 @@
+mainurl: "https://wlc.ibc.oarc.science"
 footer:
-  fr: '<a href="https://ibc.oarc.science/" target="_blank">Institut pour le  contenu biblique</a>. <strong>Hébreu biblique pour linguistes : lexique analytique multilingue de l’hébreu biblique</strong>.<br>Mis en œuvre par <a href="https://seveleu.com" target="_blank">M.Seveleu-Dubrovnik</a>, PhD initialement dans le cadre du projet de recherche à l’<a href="https://ens.fr" target="_blank">ENS</a>. Utilise <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.<br><a href="https://seveleu.com/pages/bh-resource">À propos</a> | <a href="https://www.mechon-mamre.org/p/pt/ptmp3prq.htm" target="_blank">Écouter de l’audio</a> | Dans d’autres langues:'
+  "": '<a href="https://ibc.oarc.science">Institut pour le contenu biblique</a><br><strong>Biblical Hebrew for linguists</strong>: multilingual open access tools.<br>Asset-specific credits are stated in each project’s footer.'
+  fr: '<strong>Hébreu biblique pour linguistes</strong> : récit et poésie en contexte. Corpus multilingue de l’hébreu biblique.<br>Cette ressource fait partie du projet de recherche mené par <span style="color:gray">Dr</span> <a href="https://seveleu.com" target="_blank">M.Seveleu-Dubrovnik</a> à l’<a href="https://ens.fr" target="_blank">ENS</a>, puis à l’<a href="https://ibc.oarc.science">ICB</a>.<br><a href="https://seveleu.com/pages/bh-resource">À propos</a> | <a href="https://www.mechon-mamre.org/p/pt/ptmp3prq.htm" target="_blank">Écouter de l’audio</a> | Dans d’autres langues:'
 firstyear:
+  "": 2014
   fr: 2014
-github: "https://github.com/ibc-oarc/Lexique_hebreu"
-keyboardreminder: 'Pour naviguer en avant et en arrière, utiliser les touches fléchées <span class="shadow">←</span> et <span class="shadow">→</span> du clavier<br>'
-
-website: "https://lex.ibc.oarc.science"
-readersite: "https://wlc.ibc.oarc.science"
+github: "https://github.com/ibc-oarc"
+keyboardreminder: 
+  fr: 'Pour naviguer en avant et en arrière, utiliser les touches fléchées <span class="shadow">←</span> et <span class="shadow">→</span> du clavier<br>'
 
 sitename: 
+  "": Biblical Hebrew for Linguists
   fr: Hébreu biblique pour linguistes
-heading1: Strong's
 subname: 
-  fr: Lexique analytique de l'hébreu biblique
+  "": Multilingual Open Access tools
+  fr: Récit et poésie bibliques en contexte
+texttomainpage:
+  fr: Autres outils et langues
+  en: Other tools and languages
+  ru: Все инструменты и языки 
