--- a/_data/booknames.yml
+++ b/_data/booknames.yml
@@ -1,78 +1,117 @@
 "Genesis" : 
+  "en": "Genesis"
   "fr": "Genèse"
 "Exodus" : 
+  "en": "Exodus"
   "fr": "Exode"
 "Leviticus" : 
+  "en": "Leviticus"
   "fr": "Code lévitique"
 "Numbers" : 
+  "en": "Numbers"
   "fr": "Nombres"
 "Deuteronomy" : 
+  "en": "Deuteronomy"
   "fr": "Deutéronome"
 "Joshua" : 
+  "en": "Joshua"
   "fr": "Josué"
 "Judges" : 
+  "en": "Judges"
   "fr": "Juges"
 "1 Samuel" : 
+  "en": "1 Samuel"
   "fr": "1 Samuel"
 "2 Samuel" : 
+  "en": "2 Samuel"
   "fr": "2 Samuel"
 "1 Kings" : 
+  "en": "1 Kings"
   "fr": "1 Rois"
 "2 Kings" : 
+  "en": "2 Kings"
   "fr": "2 Rois"
 "Isaiah" : 
+  "en": "Isaiah"
   "fr": "Isaïe"
 "Jeremiah" : 
+  "en": "Jeremiah"
   "fr": "Jérémie"
 "Ezekiel" : 
+  "en": "Ezekiel"
   "fr": "Ézéchiel"
 "Hosea" : 
+  "en": "Hosea"
   "fr": "Osée"
 "Joel" : 
+  "en": "Joel"
   "fr": "Joël"
 "Amos" : 
+  "en": "Amos"
   "fr": "Amos"
 "Obadiah" : 
+  "en": "Obadiah"
   "fr": "Obadia"
 "Jonah" : 
+  "en": "Jonah"
   "fr": "Jonas"
 "Micah" : 
+  "en": "Micah"
   "fr": "Michée"
 "Nahum" : 
+  "en": "Nahum"
   "fr": "Nahoum"
 "Habakkuk" : 
+  "en": "Habakkuk"
   "fr": "Habacuc"
 "Zephaniah" : 
+  "en": "Zephaniah"
   "fr": "Cephania"
 "Haggai" : 
+  "en": "Haggai"
   "fr": "Haggaï"
 "Zechariah" : 
+  "en": "Zechariah"
   "fr": "Zacharie"
 "Malachi" : 
+  "en": "Malachi"
   "fr": "Malachie"
 "Psalms" : 
+  "en": "Psalms"
   "fr": "Psaumes"
 "Proverbs" : 
+  "en": "Proverbs"
   "fr": "Proverbes"
 "Job" : 
+  "en": "Job"
   "fr": "Job"
 "Song of Songs" : 
+  "en": "Song of Songs"
   "fr": "Cantique des cantiques"
 "Ruth" : 
+  "en": "Ruth"
   "fr": "Ruth"
 "Lamentations" : 
+  "en": "Lamentations"
   "fr": "Lamentations"
 "Ecclesiastes" : 
+  "en": "Ecclesiastes"
   "fr": "Ecclésiaste"
 "Esther" : 
+  "en": "Esther"
   "fr": "Esther"
 "Daniel" : 
+  "en": "Daniel"
   "fr": "Daniel"
 "Ezra" : 
+  "en": "Ezra"
   "fr": "Ezra"
 "Nehemiah" : 
+  "en": "Nehemiah"
   "fr": "Néhémie"
 "1 Chronicles" : 
+  "en": "1 Chronicles"
   "fr": "1 Chroniques"
 "2 Chronicles" : 
+  "en": "2 Chronicles"
   "fr": "2 Chroniques"
